# rntuple-atlas-datavector

./: CustomStruct.h  README.md  repro.cpp  test_atlas_datavector.C
data/: test_ntuple_atlas_like_datavector.root
dict-rootmap/: AtlasLikeDataVector.hxx  AtlasLikeDataVectorLinkDef.hxx  CMakeLists.txt  README.md  test_getdemangledtypename.cpp  test_tclass.cpp
dict-selection/: AtlasLikeDataVector.hxx  CMakeLists.txt  selection.xml  test_tclass.cpp
dict-shlib-link/: repro.cpp  test_tclass.cpp
dict-source-embed/: CustomStruct.h
test-atlas-file/: test_atlas_datavector.C  test_atlas_datavector.cpp  test_atlas_datavector.out
test-macro-autoload/: CustomStructLinkDef.h  test.C
